Fix image in mobile view
The thumbnail for the office was too large on mobile and caused
horizontal scrolling.

--- a/source/public/pages/resume/index.scss
+++ b/source/public/pages/resume/index.scss
@@ -189,6 +189,7 @@ $button_blue: rgb(45, 139, 215);
 
 		img.thumbnail {
 			width: 260px;
+			max-width: 100%;
 			float: right;
 			margin: 10px;
 		}
